# tajator

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: analyze_entry_followthrough.py  make_sample_day.py
src/tajator/: __init__.py  cli.py  config.py  journal.py  models.py  notify.py  recovery.py  runner.py  startup.py  state_store.py
src/tajator/backtest/: __init__.py  audit.py  compare.py  daily_signals.py  data.py  forward.py  historical_signals.py  ledger.py  runner.py
src/tajator/broker/: backtest.py  base.py  ib.py  shadow.py  stub.py
src/tajator/graph/: build.py  nodes.py  state.py
src/tajator/llm/: codex.py  decide.py  pattern_data.py  prompts.py  vision.py
tests/: conftest.py  test_backtest_audit.py  test_backtest_broker.py  test_backtest_compare.py  test_backtest_data.py  test_backtest_forward.py  test_backtest_ledger.py  test_backtest_runner.py  test_cli.py  test_codex.py  test_config.py  test_contracts_execution.py  test_daily_signals.py  test_entry_failure.py  test_entry_market_data_audit.py  test_execution_calibration.py  test_execution_preflight.py  test_graph_full.py  test_guardrails.py  test_historical_signals.py  test_ib_broker.py  test_indicators.py  test_journal.py  test_levels.py  test_llm.py  test_notify.py  test_option_panel.py  test_pattern_data.py  test_position.py  test_prep.py  test_price_action.py  test_protective_stop.py  test_recovery.py  test_runner_lifecycle.py  test_setups.py  test_shadow_broker.py  test_startup.py  test_state_store.py  test_timeframes.py  test_vision.py
tests/data/: spy_sample_day.csv
(+9 files in other folders)
