[project]
name = "tajator"
version = "0.1.0"
description = "Agentic AI options trader: support/resistance strategy via LangGraph + IBKR"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "ib_async>=1.0.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tajator = "tajator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tajator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
